@@ -1,5 +1,5 @@
 TODO.txt for gemdrop_deluxe
-2021-03-19
+2021-03-20
 
  * Finish title/menu screen
    * Joystick input?
@@ -7,8 +7,9 @@ TODO.txt for gemdrop_deluxe
 
  * Help screen
 
+ * Rewrite documentation
+
  * Build/release:
-   * Decide how to manage disk storage for ATR version
    * Support cartridge ROM build
      (data save back to cart?!)
 
@@ -25,9 +26,11 @@ TODO.txt for gemdrop_deluxe
      and as indicators of wrap-around)
    * Icon showing when timer is active & how
      much time is left (missile graphics?)
+   * Line-up bar, for placing pieces (first [few] level[s] only?)
    * Bonus for free space at end of level?
    * Music
    * 7800 controller button support
+   * Explosion sound & shake when a bomb is used
 
  * Graphics fixes (bugged me from original version)
    * Bottom right shadow of diamond
