@@ -61,6 +61,7 @@ SEGMENTS {
 #    RMTSONG:   load = RMTSONGBUF, type = rw, define = yes;
 #    RMTPLAYER: load = RMTPLAYERBUF, type = rw, define = yes;
     AUTOSTRT:  load = TRAILER,    type = ro;
+    EXTZP:     load = ZP,         type = zp,                optional = yes;
 }
 
 # For cc65's "libsrc/runtime/condes.s"
